crates/phlo-transform-core/tests/snapshots/snapshots__basic-inspect.snap
---
source: crates/phlo-transform-core/tests/snapshots.rs
expression: "compilation.inspect_report(&id).expect(\"model exists\")"
---
{
  "model": {
    "id": "model://assay/results",
    "name": "assay.results",
    "namespace": "assay",
    "workflow": "assay",
    "materialization": "view",
    "target": "assay.results",
    "version": "9c605c9",
    "path": "workflows/assay/transforms/results.sql",
    "depends_on": [
      "assay.raw"
    ],
    "sources": [],
    "used_by": [
      "reporting.monthly"
    ],
    "tests": [],
    "columns": [],
    "sql": "select * from assay.raw\n"
  }
}
