crates/phlo-transform-core/tests/snapshots/snapshots__custom-roots-check.snap
---
source: crates/phlo-transform-core/tests/snapshots.rs
assertion_line: 59
expression: "compiled(\"custom-roots\").check_report()"
---
{
  "ok": true,
  "workspace_root": "../../fixtures/custom-roots",
  "roots": [
    {
      "path": "domains/assay/transforms",
      "namespace": "assay",
      "strategy": "fixed",
      "kind": "custom"
    }
  ],
  "model_count": 2,
  "source_count": 1,
  "seed_count": 0,
  "test_count": 0,
  "diagnostics": []
}
