crates/phlo-transform-core/tests/snapshots/snapshots__diagnostics-cycle-three.snap
---
source: crates/phlo-transform-core/tests/snapshots.rs
expression: compilation.diagnostics
---
[
  {
    "code": "GRAPH001",
    "severity": "error",
    "message": "transformation cycle detected",
    "labels": [
      "assay.a -> assay.b -> assay.c -> assay.a"
    ],
    "help": "break the cycle by removing one of the references"
  }
]
