crates/phlo-transform-core/tests/snapshots/snapshots__diagnostics-cycle-two.snap
---
source: crates/phlo-transform-core/tests/snapshots.rs
expression: compilation.diagnostics
---
[
  {
    "code": "GRAPH001",
    "severity": "error",
    "message": "transformation cycle detected",
    "labels": [
      "assay.a -> assay.b -> assay.a"
    ],
    "help": "break the cycle by removing one of the references"
  }
]
